--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/altaOferta.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/altaOferta.html
@@ -15,7 +15,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="../css/general.css" />
-    <title>Trabajo.uy</title>
+    <title>Alta Oferta</title>
   </head>
 
   <body class="min-vh-100 d-flex flex-column">
