--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/consultaDePaqueteDeTiposDePublicacionDeOfertaLaboral.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/consultaDePaqueteDeTiposDePublicacionDeOfertaLaboral.html
@@ -19,7 +19,6 @@
   </head>
 
   <body>
-    <!-- El cuerpo del body por lo general esta compuesto de tres etiquetas: header(portada), main, footer(pie de página, dónde por lo general van los contactos, redes sociales, etc)-->
     <nav class="navbar navbar-expand-lg">
       <div class="container">
         <div class="row w-100 justify-content-between align-items-center">
@@ -70,8 +69,6 @@
     </nav>
 
     <main class="home">
-      <!-- El cuerpo main del home va a contener dos secciones(section). A la izquierda una tabla(table) con las keywords. Y a la derecha varios contenedores(div) uno debajo del otro que contienen la imagen(img) y descripción(p) de las ofertas laborales.
-        El cuerpo de la tabla(tbody) contiene botones para que después al hacer click filtre por lo que corresponda -->
       <div class="mainLeft">
         <section class="menu">
           <div class="dropdown">
@@ -88,6 +85,14 @@
             </a>
 
             <ul class="dropdown-menu">
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="../menu/compraPaquete.html"
+                  id="compraPaquete"
+                  >Comprar Paquete</a
+                >
+              </li>
               <li>
                 <a
                   class="dropdown-item"
@@ -165,63 +170,101 @@
         </section>
       </div>
       <div class="mainCenter">
-        <div class="espacio3"></div>
-        <section class="consultaUsuario">
-          <div class="container">
-            <h1>Usuarios registrados</h1>
-            <div class="table-responsive">
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th class="thClass">Perfil</th>
-                    <!-- Personaliza el ancho de la columna -->
-                    <th class="thClass">Nickname</th>
-                    <!-- Personaliza el ancho de la columna -->
-                    <th class="thClassLarge">Tipo de Usuario</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td><a href="#">Perfil</a></td>
-                    <td>KevinBarraAmsterdam</td>
-                    <td>Empresa</td>
-                  </tr>
-                  <tr>
-                    <td><a href="#">Perfil</a></td>
-                    <td>Benjamin</td>
-                    <td>Postulante</td>
-                  </tr>
-                  <tr>
-                    <td><a href="#">Perfil</a></td>
-                    <td>EcoTech</td>
-                    <td>Empresa</td>
-                  </tr>
-                  <tr>
-                    <td><a href="#">Perfil</a></td>
-                    <td>Meta</td>
-                    <td>Empresa</td>
-                  </tr>
-                  <tr>
-                    <td><a href="#">Perfil</a></td>
-                    <td>CrisCanario</td>
-                    <td>Postulante</td>
-                  </tr>
-                  <tr>
-                    <td><a href="#">Perfil</a></td>
-                    <td>Octobot</td>
-                    <td>Empresa</td>
-                  </tr>
-                  <tr>
-                    <td><a href="#">Perfil</a></td>
-                    <td>MauroLombardo</td>
-                    <td>Postulante</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
+        <section class="consultaPaqueteTipoPublicacion">
+          <div class="paqueteTipoPublicacion">
+            <img
+              class="imgOfertas"
+              src="../img/paquete.jpeg"
+              alt="Oferta Desarrollo Frontend"
+            />
+
+            <p class="paqueteTipoPublicacionDatosView">
+              <strong>Tipo:</strong> Oro
+              <br />
+              <strong>Descripción:</strong>
+              Excelente para empresas con gran actividad de marketing.
+              <br />
+              <strong>Costo:</strong> $<span id="costo">99.99</span>
+              <br />
+              <strong>Cantidad de Publicaciones:</strong>
+              <span id="cantidadPublicaciones">5</span>
+              <br />
+              <br />
+              <a href="./Paquete.html">Mas Info</a>
+            </p>
+          </div>
+
+          <div class="paqueteTipoPublicacion">
+            <img
+              class="imgOfertas"
+              src="../img/paquete.jpeg"
+              alt="Oferta Desarrollo Frontend"
+            />
+
+            <p class="paqueteTipoPublicacionDatosView">
+              <strong>Tipo:</strong> Plata
+              <br />
+              <strong>Descripción:</strong>
+              Excelente para empresas con gran actividad de marketing.
+              <br />
+              <strong>Costo:</strong> $<span id="costo">99.99</span>
+              <br />
+              <strong>Cantidad de Publicaciones:</strong>
+              <span id="cantidadPublicaciones">5</span>
+              <br />
+              <br />
+              <a href="./Paquete.html">Mas Info</a>
+            </p>
+          </div>
+
+          <div class="paqueteTipoPublicacion">
+            <img
+              class="imgOfertas"
+              src="../img/paquete.jpeg"
+              alt="Oferta Desarrollo Frontend"
+            />
+
+            <p class="paqueteTipoPublicacionDatosView">
+              <strong>Tipo:</strong> Bronce
+              <br />
+              <strong>Descripción:</strong>
+              Excelente para empresas con gran actividad de marketing.
+              <br />
+              <strong>Costo:</strong> $<span id="costo">99.99</span>
+              <br />
+              <strong>Cantidad de Publicaciones:</strong>
+              <span id="cantidadPublicaciones">3</span>
+              <br />
+              <br />
+              <a href="./Paquete.html">Mas Info</a>
+            </p>
+          </div>
+
+          <div class="paqueteTipoPublicacion">
+            <img
+              class="imgOfertas"
+              src="../img/paquete.jpeg"
+              alt="Oferta Desarrollo Frontend"
+            />
+
+            <p class="paqueteTipoPublicacionDatosView">
+              <strong>Tipo:</strong> Carbono
+              <br />
+              <strong>Descripción:</strong>
+              Excelente para empresas con gran actividad de marketing.
+              <br />
+              <strong>Costo:</strong> $<span id="costo">99.99</span>
+              <br />
+              <strong>Cantidad de Publicaciones:</strong>
+              <span id="cantidadPublicaciones">2</span>
+              <br />
+              <br />
+              <a href="./Paquete.html">Mas Info</a>
+            </p>
           </div>
         </section>
       </div>
+      <div class="mainRight"></div>
     </main>
 
     <footer></footer>
@@ -231,6 +274,8 @@
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
-    <script src="/tpgr04/Tarea2/Servidor-Web/src/main/webapp/recourse/js/dejarOpcionMarcada.js"></script>
+    <script src="../js/dejarOpcionMarcada.js"></script>
+    <script src="../js/paqueteTipoPublicacion/consultaTipoPaqueteVerDropdownDeOfertas.js"></script>
+    <script src="../js/paqueteTipoPublicacion/seleccionConsultaTipoDePaquete.js"></script>
   </body>
 </html>
