--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/inicioSession.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/inicioSession.html
@@ -4,46 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="../css/general.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <title>Inicio Sessión</title>
 </head>
 
-<body>
-    <header>
-        <aside class="logo">Trabajo<span>.uy</span></aside>
-        <nav class="portada">
-            <ul class="menuRegistro">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="">Usuarios</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main class="login">
-        <form class="formLogin" action="./consultarMiPerfilEmpresa.html">
-            <div class="mb-3 mt-3">
-                <label for="email" class="form-label">*Email o nickname:</label>
-                <input type="email" class="form-control" id="email"  name="email">
-            </div>
-            <div class="mb-3">
-                <label for="pwd" class="form-label">*Contraseña:</label>
-                <input type="password" class="form-control" id="pwd"  name="pswd">
-            </div>
-            <div class="mb-3">
-                <label class="form-label mb-3">¿No tienes cuenta?</label>
-                <a href="./altaUsuario.html">Registrarte</a>
-            </div>
-            <button type="submit" class="btn btn-primary">Ingresar</button>
-        </form>
-    </main>
-
-
-
-    <script src="../js/app.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
-    </script>
+<body class="login">
+    <form class="formLogin" action="./consultarMiPerfilEmpresa.html">
+        <a href="../../index.html"><img src="../img/Logo.svg" alt="Logo" class="navbar-brand img-fluid" /></a>
+        <div class="mb-3 mt-3">
+            <label for="email" class="form-label"><strong>*Email o nickname:</strong></label>
+            <input type="email" class="form-control" id="email"  name="email">
+        </div>
+        <div class="mb-3">
+            <label for="pwd" class="form-label"><strong>*Contraseña:</strong></label>
+            <input type="password" class="form-control" id="pwd"  name="pswd">
+        </div>
+        <div class="mb-3">
+            <label class="form-label mb-3"><strong>¿No tienes cuenta?</strong></label>
+            <a class="btn btn-primary" href="./altaUsuario.html">Registrarse</a>
+        </div>
+        <button type="submit" class="btn btn-primary">Ingresar</button>
+    </form>
+<script src="../js/app.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
+</script>
 </body>
 
 </html>
