--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/indexPostulante.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Postulante/indexPostulante.html
@@ -8,7 +8,7 @@
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
     <link rel="icon" type="image/x-icon" href="./recourse/img/Icon_Logo.svg" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" />
-    <link rel="stylesheet" href="../css/general.css" />
+    <link rel="stylesheet" href="../../css/general.css" />
     <title>Trabajo.uy</title>
 </head>
 
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="row w-100 justify-content-between align-items-center">
                 <div class="col-2">
-                    <a href="../../index.html"><img src="../img/Logo.svg" alt="Logo"
+                    <a href="./indexPostulante.html"><img src="../../img/Logo.svg" alt="Logo"
                             class="navbar-brand img-fluid" /></a>
                 </div>
 
@@ -39,9 +39,9 @@
                 <div class="col-3">
                     <ul class="navbar-nav justify-content-evenly fs-3">
                         <li class="nav-item">
-                            <a class="nav-link text-white" href="../../index.html">Inicio</a>
+                            <a class="nav-link text-white" href="./indexPostulante.html">Inicio</a>
                         </li>
-                        <li class="nav-item"><img class="rounded-pill imgPerfil" src="../img/ecoTechLogo.jpg"
+                        <li class="nav-item"><img class="rounded-pill imgPerfil" src="../../img/ecoTechLogo.png"
                                 alt="Foto de Perfil"></li>
                         <li class="nav-item">
                             <div class="dropdown selectUsuario">
@@ -50,7 +50,7 @@
                                 </button>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="./consultarMiPerfilPostulante.html">Perfil</a></li>
-                                    <li><a class="dropdown-item" href="../../index.html">Cerrar Sessión</a></li>
+                                    <li><a class="dropdown-item" href="../../../index.html">Cerrar Sessión</a></li>
                                 </ul>
                             </div>
                         </li>
@@ -73,7 +73,7 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td class="d-flex"><a class="btn" href="./consultaUsuario.html">Consulta
+                                    <td class="d-flex"><a class="btn" href="">Consulta
                                             usuarios</a></td>
                                 </tr>
                                 <tr>
@@ -146,7 +146,7 @@
                     <div class="card">
                         <div class="row g-0">
                             <div class="col-md-4 justify-content-center align-items-center d-flex">
-                                <img src="../img/ofertas/Oferta01.png" class="img-fluid rounded-start"
+                                <img src="../../img/ofertas/Oferta01.png" class="img-fluid rounded-start"
                                     alt="Imagen Oferta" />
                             </div>
                             <div class="col-md-8">
@@ -160,7 +160,7 @@
                                     </p>
                                 </div>
                                 <div class="card-footer border-0 bg-white text-end">
-                                    <a href="./oferta.html" class="btn btn-primary">Mas
+                                    <a href="" class="btn btn-primary">Mas
                                         Info</a>
                                 </div>
                             </div>
@@ -169,7 +169,7 @@
                     <div class="card">
                         <div class="row g-0">
                             <div class="col-md-4 justify-content-center align-items-center d-flex">
-                                <img src="../img/ofertas/Oferta07.jpeg" class="img-fluid rounded-start"
+                                <img src="../../img/ofertas/Oferta07.jpeg" class="img-fluid rounded-start"
                                     alt="Imagen Oferta" />
                             </div>
                             <div class="col-md-8">
@@ -183,7 +183,7 @@
                                     </p>
                                 </div>
                                 <div class="card-footer border-0 bg-white text-end">
-                                    <a href="./oferta.html" class="btn btn-primary">Mas
+                                    <a href="" class="btn btn-primary">Mas
                                         Info</a>
                                 </div>
                             </div>
@@ -192,7 +192,7 @@
                     <div class="card">
                         <div class="row g-0">
                             <div class="col-md-4 justify-content-center align-items-center d-flex">
-                                <img src="../img/ofertas/OfertaGenerica.jpg" class="img-fluid rounded-start"
+                                <img src="../../img/ofertas/OfertaGenerica.jpg" class="img-fluid rounded-start"
                                     alt="Imagen Oferta" />
                             </div>
                             <div class="col-md-8">
@@ -206,7 +206,7 @@
                                     </p>
                                 </div>
                                 <div class="card-footer border-0 bg-white text-end">
-                                    <a href="./oferta.html" class="btn btn-primary">Mas
+                                    <a href="" class="btn btn-primary">Mas
                                         Info</a>
                                 </div>
                             </div>
@@ -215,7 +215,7 @@
                     <div class="card">
                         <div class="row g-0">
                             <div class="col-md-4 justify-content-center align-items-center d-flex">
-                                <img src="../img/ofertas/OfertaGenerica.jpg" class="img-fluid rounded-start"
+                                <img src="../../img/ofertas/OfertaGenerica.jpg" class="img-fluid rounded-start"
                                     alt="Imagen Oferta" />
                             </div>
                             <div class="col-md-8">
@@ -229,7 +229,7 @@
                                     </p>
                                 </div>
                                 <div class="card-footer border-0 bg-white text-end">
-                                    <a href="./consultaOfertaLaboral.html" class="btn btn-primary">Mas
+                                    <a href="" class="btn btn-primary">Mas
                                         Info</a>
                                 </div>
                             </div>
