--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/inicioSession.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/inicioSession.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="login">
-    <form class="formLogin" action="./consultarMiPerfilEmpresa.html">
+    <form class="formLogin" action="">
         <a href="../../index.html"><img src="../img/Logo.svg" alt="Logo" class="navbar-brand img-fluid" /></a>
         <div class="mb-3 mt-3">
             <label for="email" class="form-label"><strong>*Email o nickname:</strong></label>
@@ -25,7 +25,8 @@
             <label class="form-label mb-3"><strong>¿No tienes cuenta?</strong></label>
             <a class="btn btn-primary" href="./altaUsuario.html">Registrarse</a>
         </div>
-        <button type="submit" class="btn btn-primary">Ingresar</button>
+        <a class="btn btn-primary" href="../menu/Postulante/indexPostulante.html">Postulante</a>
+        <a class="btn btn-primary" href="../menu/Empresa/indexEmpresa.html">Empresa</a>
     </form>
 <script src="../js/app.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
