--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/indexEmpresa.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/indexEmpresa.html
@@ -58,10 +58,10 @@
                 >
               </li>
               <li class="nav-item">
-                <img class="rounded-pill imgPerfil" <<<<<<< HEAD
-                src="../../img/Usuarios/Empresas/Empresa01.jpg" =======
-                src="../../img/ecoTechLogo.png" >>>>>>> KevinWeb alt="Foto de
-                Perfil" />
+                <img
+                  class="rounded-pill imgPerfil"
+                  src="../../img/Usuarios/Empresas/Empresa01.jpg"
+                />
               </li>
               <li class="nav-item">
                 <div class="dropdown selectUsuario">
@@ -140,7 +140,7 @@
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="./consultaOferta.html"
+                      <a class="btn" href="../consultaOfertaLaboralEmpresa.html"
                         >Consulta ofertas laborales</a
                       >
                     </td>
