--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/consultaOfertaLaboralEmpresa.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/consultaOfertaLaboralEmpresa.html
@@ -60,7 +60,7 @@
               <li class="nav-item">
                 <img
                   class="rounded-pill imgPerfil"
-                  src="../img/ecoTechLogo.jpg"
+                  src="../img/Usuarios/Empresas/Empresa01.jpg"
                   alt="Foto de Perfil"
                 />
               </li>
@@ -116,19 +116,27 @@
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="./consultaUsuario.html"
+                      <a class="btn" href="./Empresa/consultaUsuario.html"
                         >Consulta usuarios</a
                       >
                     </td>
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="">Ver tipos de publicaciones</a>
+                      <a
+                        class="btn"
+                        href="./Empresa/consultaDeTipoDePublicacionDeOfertaLaboral.html"
+                        >Ver tipos de publicaciones</a
+                      >
                     </td>
                   </tr>
                   <tr>
                     <td class="d-flex">
-                      <a class="btn" href="">Ver tipos de paquetes</a>
+                      <a
+                        class="btn"
+                        href="./Empresa/consultaDePaqueteDeTiposDePublicacionOfertaLaboral.html"
+                        >Ver tipos de paquetes</a
+                      >
                     </td>
                   </tr>
                   <tr>
@@ -256,68 +264,9 @@
                 </div>
               </div>
             </div>
-            <div class="card">
-              <div class="row g-0">
-                <div
-                  class="col-md-4 justify-content-center align-items-center d-flex"
-                >
-                  <img
-                    src="../img/ofertas/OfertaGenerica.jpg"
-                    class="img-fluid rounded-start"
-                    alt="Imagen Oferta"
-                  />
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h5 class="card-header p-0 border-0 bg-white text-start">
-                      Estratega de Negocios
-                    </h5>
-                    <p class="card-text">
-                      Forma parte de nuestro equipo de estrategia y contribuye
-                      al crecimiento de las empresas clientes.
-                    </p>
-                  </div>
-                  <div class="card-footer border-0 bg-white text-end">
-                    <a href="./ofertaEmpresa.html" class="btn btn-primary"
-                      >Mas Info</a
-                    >
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="row g-0">
-                <div
-                  class="col-md-4 justify-content-center align-items-center d-flex"
-                >
-                  <img
-                    src="../img/ofertas/OfertaGenerica.jpg"
-                    class="img-fluid rounded-start"
-                    alt="Imagen Oferta"
-                  />
-                </div>
-                <div class="col-md-8">
-                  <div class="card-body">
-                    <h5 class="card-header p-0 border-0 bg-white text-start">
-                      Analista de Datos
-                    </h5>
-                    <p class="card-text">
-                      Ayuda a nuestros clientes a tomar decisiones informadas
-                      basadas en analisis y visualizaciones de datos.
-                    </p>
-                  </div>
-                  <div class="card-footer border-0 bg-white text-end">
-                    <a href="./ofertaEmpresa.html" class="btn btn-primary"
-                      >Mas Info</a
-                    >
-                  </div>
-                </div>
-              </div>
-            </div>
           </section>
         </div>
       </div>
-      <div></div>
     </main>
 
     <script
