--- a/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/Paquete.html
+++ b/Tarea2/Servidor-Web/src/main/webapp/recourse/menu/Empresa/Paquete.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="../css/general.css" />
+    <link rel="stylesheet" href="../../css/general.css" />
     <title>Trabajo.uy</title>
   </head>
   <body class="min-vh-100 d-flex flex-column">
@@ -58,7 +58,7 @@
               </li>
               <li class="nav-item">
                 <img
-                  class="rounded-pill imgPerfil"
+                  class="rounded-pill img-fluid"
                   src="../../img/Usuarios/Empresas/Empresa01.jpg"
                   alt="Foto de Perfil"
                 />
@@ -198,7 +198,7 @@
             <div class="row g-0">
               <div class="col-4 d-flex align-items-center">
                 <img
-                  src="../img/Paquete/Basico.jpg"
+                  src="../../img/Paquete/Basico.jpg"
                   class="img-fluid rounded-start"
                   alt="..."
                 />
